eks-airflow/config_files/airflow-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: airflow-web-service
  namespace: dev
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    app: "airflow"
    component: "web"
