eks-airflow/config_files/airflow-web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-web-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:315119964270:certificate/c9227b6c-a0c2-4987-93ad-577ae180c6e5
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: "airflow"
    component: "web"
spec:
  ingressClassName: alb
  rules:
  - host: dl-fmwrk-airflow-domain.click
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airflow-web-service
            port: 
              number: 8080
  tls:
  - hosts:
    - dl-fmwrk-airflow-domain.click
